Fix issue with fortawesome/fontawesome (fa-2x class was not working) Fix issue with fontawesome font-family (I had to add it through cdn) Fix issue with react-slick (added cdn following advice from https://stackoverflow.com/a/54391240/18587737)

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -23,6 +23,9 @@ $theme-colors: map-merge($custom-theme-colors, $theme-colors);
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
 
+// This has the only purpose of adding fa-2x class
+@import '@fortawesome/fontawesome-free/css/all';
+
 #home {
   opacity: 0;
 
@@ -170,7 +173,6 @@ $theme-colors: map-merge($custom-theme-colors, $theme-colors);
 }
 
 #seguros {
-  // background-image: linear-gradient(to right, $primary , $primary-dark);
   background: linear-gradient(172.78deg, $primary, $primary-dark);
 
   .list {
@@ -214,7 +216,6 @@ $theme-colors: map-merge($custom-theme-colors, $theme-colors);
 }
 
 #servicios {
-  // background-image: linear-gradient(to right, $primary-dark , $primary);
   background: linear-gradient(172.78deg, $primary-dark, $primary);
 
   .card {
@@ -585,29 +586,29 @@ $theme-colors: map-merge($custom-theme-colors, $theme-colors);
 
   .panel-group .panel{
     background-color: $light;
-    border:none;
-    box-shadow:none;
+    border: none;
+    box-shadow: none;
     border-radius: 10px;
-    margin-bottom:11px;
+    margin-bottom: 11px;
   };
 
   .panel .panel-heading{
     padding: 0;
-    border-radius:10px;
+    border-radius: 10px;
     border: none;
   };
 
   .panel-heading button{
     display: block;
-    border:none;
-    padding:20px 35px 20px;
+    border: none;
+    padding: 20px 35px 20px;
     font-size: 20px;
-    background-color:$light;
-    font-weight:600;
+    background-color: $light;
+    font-weight: 600;
     position: relative;
-    color:$light;
-    box-shadow:none;
-    transition:all 0.1s ease 0;
+    color: $light;
+    box-shadow: none;
+    transition: all 0.1s ease 0;
   };
 
   .panel-heading button:after, .panel-heading button.collapsed:after{
@@ -615,22 +616,22 @@ $theme-colors: map-merge($custom-theme-colors, $theme-colors);
     font-family: fontawesome;
     text-align: center;
     position: absolute;
-    left:-20px;
+    left: -20px;
     top: 10px;
     color: $secondary !important;
-    background-color:$light;
+    background-color: $light;
     border: 5px solid $light;
     font-size: 15px;
     width: 40px;
-    height:40px;
+    height: 40px;
     line-height: 30px;
     border-radius: 50%;
-    transition:all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
   };
 
   .panel-heading:hover button:after,
   .panel-heading:hover button.collapsed:after{
-    transform:rotate(360deg);
+    transform: rotate(360deg);
   };
 
   .panel-heading button.collapsed:after{
@@ -639,11 +640,11 @@ $theme-colors: map-merge($custom-theme-colors, $theme-colors);
 
   #accordion .panel-body{
     background-color: $light;
-    color:#8C8C8C;
+    color: $gray-400;
     line-height: 25px;
     padding: 10px 25px 20px 35px ;
-    border-top:none;
-    font-size:14px;
+    border-top: none;
+    font-size: 14px;
     position: relative;
   };
 
@@ -797,7 +798,5 @@ $theme-colors: map-merge($custom-theme-colors, $theme-colors);
 }
 
 #quoter-form {
-  // background: linear-gradient(172.78deg, $primary-dark, $primary);
-  // background: linear-gradient(172.78deg, $secondary-light 9.92%, $secondary 87.35%);
   background: linear-gradient(172.78deg, $secondary 9.92%, $secondary-light 87.35%);
 }
